# fastlinkingnumbers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  antequ_table1.csv  antequ_table2.csv  replicability.sh  test.sh  unzip_and_run_scripts.sh
data/: Attribution.txt  glove.bcc  knittubebroken.bcc  knittubeinit.bcc
include/: curve.h  linking_number_certificate.h  model.h
results/reference_certificates/: knittubebroken.txt
src/: BVAlgorithms.h  BVH.h  CMakeLists.txt  ModifiedKdBVH.h  compute_link.cpp  compute_link.h  curve.cpp  define_args.h  discretize.cpp  discretize.h  linking_number_certificate.cpp  main.cpp  model.cpp  obj2bcc.cpp  potential_link_search.cpp  potential_link_search.h  replicability_script.cpp
